--- a/SCSS/Theme Rewrite/plugins-third-party/_plugin-breadcrumbs.scss
+++ b/SCSS/Theme Rewrite/plugins-third-party/_plugin-breadcrumbs.scss
@@ -60,8 +60,8 @@ button[class^="BC"]
     }
 }
 .markdown-rendered.BC-matrix-view {
-    & .BC-matrix-view-dir { 
-        padding: var(--size-4-1) var(--size-4-3);
+    & .BC-matrix-view-field { 
+        padding: var(--size-4-1) var(--size-4-1) var(--size-4-3) var(--size-4-1);
         border: 2px solid var(--outline);
         border-radius: var(--radius-s);
         box-shadow: var(--shadow-m);
@@ -70,6 +70,9 @@ button[class^="BC"]
             font-family: var(--h1-font);
             color: var(--h1-color);
         }
+    }
+    & .font-mono {
+        font-family: var(--font-monospace);
     }
 }
 
